fix overflow with video

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 @font-face {
@@ -392,7 +393,7 @@ ul {
   height: auto;
   position: relative;
   top: -20px;
-  width: 100vw;
+  width: 99vw;
   z-index: -1;
 }
 
